# link_tracker_bot

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/ai_agent_service/: config.py  logger.py  main.py  models.py
src/ai_agent_service/services/: filter.py  handler.py  summarizer.py
src/bot_service/: config.py  link.py  logger.py  main.py  tools.py
src/bot_service/api/: models.py  routes.py
src/bot_service/clients/: scrapper_client.py
src/bot_service/data/: .env
src/bot_service/data/messages/: error_message.txt  help_message.txt  welcome_message.txt
src/bot_service/handlers/: commands.py  links.py  track.py
src/bot_service/services/: http_update_handler.py  kafka_consumer.py
src/scrapper_service/: config.py  main.py  scheduler.py
src/scrapper_service/api/: models.py  routes.py  schemes.py
src/scrapper_service/clients/: github_client.py  stackoverflow_client.py
src/scrapper_service/database/: __init__.py  migrations.py
src/scrapper_service/database/migrations/: 001_initial_schema.sql
src/scrapper_service/models/: db_models.py
src/scrapper_service/repos/: base.py
src/scrapper_service/repos/orm/: models.py  orm_chat_repository.py  orm_link_repository.py  orm_subscription_repository.py
src/scrapper_service/repos/sql/: chat_repository.py  link_repository.py  subscription_repository.py
src/scrapper_service/services/: kafka_sender.py  message_sender.py  tracker_service.py  update_sender.py
