[tool.poetry]
name = "linktracker-monorepo"
version = "0.1.0"
description = "Scrapper & Bot Services Monorepo"
package-mode = false
authors = ["g.tarasov <g.tarasov@tbank.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

fastapi = "^0.135.1"
uvicorn = "^0.41.0"
pydantic-settings = "^2.13.1"
structlog = "^25.5.0"
httpx = "^0.28.1"
jinja2 = "^3.1.6"

aiokafka = "^0.11.0"
tenacity = "^9.0.0"
pybreaker = "^1.2.0"

apscheduler = "^3.11.2"

python-telegram-bot = "^22.6"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
ruff = "^0.6.1"
pytest = "^8.3.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.24.0"
pytest-deadfixtures = "*"
mypy = "^1.19.1"
testcontainers = {version = "^4.8.0", extras = ["kafka", "postgresql"]}
slowapi = "^0.1.9"
limits = "^3.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"
asyncio_mode = "auto"

[tool.mypy]
plugins = ["pydantic.mypy"]
explicit_package_bases = true
mypy_path = "src"
allow_redefinition = true
ignore_missing_imports = true
no_implicit_optional = true
strict_equality = true
warn_unused_ignores = true
exclude = "^(./)?test_[\\w]+\\.py$|conftest\\.py|tests"